# cctools-port

./: .gitignore  CMakeLists.txt  README.md
cctools/: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac
cctools/ar/: Makefile.in
cctools/as/: Makefile.in  as.c  driver.c
cctools/as/arm/: Makefile.in
cctools/as/i386/: Makefile.in
cctools/as/ppc/: Makefile.in
cctools/as/ppc64/: Makefile.in
cctools/as/x86_64/: Makefile.in
cctools/efitools/: Makefile.in
cctools/include/foreign/: dirent.h  fcntl.h  pwd.h  stdio.h  stdlib.h  string.h  unistd.h
cctools/include/foreign/i386/: _types.h  limits.h  types.h
cctools/include/foreign/libkern/: OSTypes.h
cctools/include/foreign/machine/: _types.h
cctools/include/foreign/ppc/: limits.h  types.h
cctools/include/foreign/sys/: _types.h  attr.h  mman.h  stat.h  sysctl.h
cctools/include/mach-o/: dyld.h  loader.h  nlist.h  ranlib.h
cctools/include/stuff/: bytesex.h
cctools/ld64/: .gitignore  Makefile.in
cctools/ld64/doc/man/: Makefile.in
cctools/ld64/src/: CMakeLists.txt  Makefile.in
cctools/ld64/src/3rd/: Makefile.in  helper.c
cctools/ld64/src/3rd/BlocksRuntime/: Block_private.h  Makefile.in  runtime.c
cctools/ld64/src/abstraction/: MachOFileAbstraction.hpp
cctools/ld64/src/ld/: InputFiles.cpp  LinkEdit.hpp  LinkEditClassic.hpp  Makefile.in  Options.cpp  Options.h  OutputFile.cpp  Resolver.cpp  Snapshot.cpp  ld.hpp
cctools/ld64/src/ld/code-sign-blobs/: blob.h  endian.h  memutils.h
cctools/ld64/src/ld/parsers/: Makefile.in  lto_file.cpp  macho_dylib_file.cpp  macho_relocatable_file.cpp  textstub_dylib_file.cpp
cctools/ld64/src/ld/parsers/libunwind/: AddressSpace.hpp
cctools/ld64/src/ld/passes/: Makefile.in  bitcode_bundle.cpp  branch_island.cpp
cctools/ld64/src/mach_o/: Makefile.in
cctools/ld64/src/other/: Makefile.in  ObjectDump.cpp  PruneTrie.cpp  dyldinfo.cpp  machochecker.cpp  rebase.cpp  unwinddump.cpp
cctools/libmacho/: Makefile.in
cctools/libobjc2/: Makefile.in
cctools/libstuff/: CMakeLists.txt  Makefile.am  Makefile.in  SymLoc.c  crc32.c  dylib_roots.c  dylib_table.c  execute.c  llvm.c  macosx_deployment_target.c  ofile.c  writeout.c
cctools/m4/: llvm.m4
cctools/man/: Makefile.in
cctools/misc/: CMakeLists.txt  Makefile.am  Makefile.in  bitcode_strip.c  ctf_insert.c  indr.c  install_name_tool.c  libtool.c  lipo.c  seg_addr_table.c  segedit.c  strings.c  strip.c
cctools/mman/: mman-win32.h  mman.c
cctools/otool/: Makefile.am  Makefile.in  arm_disasm.c  i386_disasm.c  main.c  ofile_print.c
lipo/: Makefile.in
lipo/misc/: Makefile.in  lipo.c
tools/: create_cctools_merge_patch.sh  create_ld64_merge_patch.sh  find_lto_header.sh
usage_examples/ios_toolchain/: wrapper.c
